--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Pranesh</title>
-    <base href="/" />
+    <base href="./" />
     <meta
       name="description"
       content="Pranesh: Experienced Front End Engineer in Web and Mobile application Development - Specialized in Angular6"
